# AniTails

./: README.md  meson.build  ru.vendenet.anitails.json
data/: anitails.gresource.xml  meson.build  ru.vendenet.anitails.appdata.xml.in  ru.vendenet.anitails.desktop.in  ru.vendenet.anitails.gschema.xml
data/icons/: meson.build
data/ui/: window.ui
po/: POTFILES  POTFILES.in  anitails.pot  meson.build  ru.mo  ru.po  update_pot.sh
src/: anitails.gresource.xml  anitails.in  main.py  meson.build  window.py  window.ui
