application_id = 'ru.vendenet.anitails'

scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_data(
  scalable_dir / ('@0@.svg').format(application_id),
  install_dir: get_option('datadir') / 'icons' / scalable_dir
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
install_data(
  symbolic_dir / ('@0@-symbolic.svg').format(application_id),
  install_dir: get_option('datadir') / 'icons' / symbolic_dir
)
install_data(
  symbolic_dir / ('random-symbolic.svg'),
  install_dir: get_option('datadir') / 'icons' / symbolic_dir
)
install_data(
  symbolic_dir / ('trophy-symbolic.svg'),
  install_dir: get_option('datadir') / 'icons' / symbolic_dir
)
install_data(
  symbolic_dir / ('heart-symbolic.svg'),
  install_dir: get_option('datadir') / 'icons' / symbolic_dir
)
install_data(
  symbolic_dir / ('history-symbolic.svg'),
  install_dir: get_option('datadir') / 'icons' / symbolic_dir
)